projet_gl/src/test/deca/context/valid/3_65/3_65_1_Selection.deca
// Description:
//    Programme minimaliste faisant un selection
//
// Resultats:
//
// Historique:
//    cree le 19/01/2024

class A {
    int a;
    int b;
}

{
    A test1 = new A();
    test1.a = 1;
    test1.b = 2;
}