projet_gl/src/test/deca/context/invalid/3_13/3_13_1_DeclParam.deca
// Description:
//    Problem redeclared parameter
//
// Resultats:
//    Ligne 11: Parameter is redeclared.
// 
// Historique:
//    cree le 09/01/2024

class A{   
   int method1(int a, int a){

   }
}